# s8

./: .gitignore  requirements.txt
BCT/: Module1_Today_Exam_AnswerBank.md  Module2_Today_Exam_AnswerBank.md  (+17 more)
TeachingAgent/backend/: .env.example  FINAL_TEST.sh  check_ingestion.py  create_test_concept.py  demo_teaching_session.py  extract_proper_concepts.py  extract_with_ollama.py  ingest_all_subjects.py  ingest_soft_computing.py  manual_concept_extraction.py  migrate_db.py  pyproject.toml  requirements-test.txt  run_backend.sh  test_all_endpoints.sh  test_endpoints_final.sh  test_fixed_endpoints.sh  test_services.py  test_streaming.py
TeachingAgent/backend/app/: main.py
TeachingAgent/backend/app/api/: routes.py  streaming_routes.py
TeachingAgent/backend/app/core/: database.py  settings.py
TeachingAgent/backend/app/models/: db.py  schemas.py
TeachingAgent/backend/app/services/: chunking_service.py  concept_extraction_service.py  document_parser.py  file_classifier.py  flashcard_service.py  goku_tts_service.py  ingestion_service.py  interactive_teacher_service.py  knowledge_graph_service.py  learning_service.py  ollama_router.py  pipeline_service.py  quiz_service.py  streaming_service.py  teaching_session_service.py  transcription_service.py  tts_service.py  tutor_service.py  visual_asset_service.py  voice_profile_service.py
TeachingAgent/backend/tests/: README.md  __init__.py  conftest.py  test_chunking_service.py  test_e2e_learning_session.py  test_interactive_teacher_service.py  test_learning_service.py  test_tts_service.py  test_tutor_service.py
(+162 files in other folders)
